Doc: Update parameter names in QML ImageCapture's signals

The ImageCapture QML type contains invalid signal parameter names in the
documentation. They should be changed so that they do not mislead users.

Pick-to: 6.6 6.5
Fixes: QTBUG-118593
Change-Id: Icb4e46e1081a0b1bfc3eab1362a006eabeab5f7e
Reviewed-by: Nicholas Bennett <nicholas.bennett@qt.io>
(cherry picked from commit dd3701e6c8497947d73ac588c59726a049f50ca0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>